--- a/graphic-design.html
+++ b/graphic-design.html
@@ -148,7 +148,7 @@
           <div class="col-6"><span class="image fit"><img src="images/grandfolia/plants2.png" alt="" /></span></div>
         </div>
       </div>
-      <p>As a Design Director for Grandfolia, I had the incredible opportunity to bring the brand to life. I led the website
+      <p>As the Design Director for Grandfolia, I had the incredible opportunity to bring the brand to life. I led the website
         design, created a custom logo, approved copywrite, and captured all the photography featured on the site. Working with a talented team, I directed and contributed to the creation of the floral
         arrangements showcased throughout the website. This project was a rewarding blend of design, artistry, and storytelling.</p>
       <a target="_blank" href="https://grandfolia.com/photo-gallery/?jtg-filter=all" class="button primary fit grandfolia">Grandfolia Portfolio</a>
