--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 						<div class="content">
 							<div class="inner">
 								<h2>Design Projects</h2>
-								<p>Over the years I have created a diverse range of creative work, including graphic art, branding,
-								logo design, and photography.</p>
+								<p>Over the years I have created a diverse range of creative work, including graphic art,
+								logo design, branding, and photography.</p>
 								<ul class="actions">
 									<li><a href="graphic-design.html" class="button">View Projects</a></li>
 								</ul>
@@ -163,33 +163,33 @@
 							logically, methodically, and creatively. When building an idea, a user’s experience is very important to me, so I strive
 							to craft a product that is innovative, visually appealing, and intuitive for everyone.</p>
 						<ul class="actions">
-							<li><a href="about-me.html" class="about-button button">Learn More About Me</a></li>
+							<li><a href="about-me.html" class="about-button button primary">Learn More About Me</a></li>
 						</ul>
 							<h3>My Skills</h3>
 							<div class="features">
+								<section class="row-icon">
+									<span style="font-size:30px;color:white;">★</span>
+									<h3>Creative Strategy</h3>
+								</section>
 								<section class="row-icon">
 									<span style="font-size:30px;color:white;">★</span>
 									<h3>Product Management</h3>
 								</section>
 								<section class="row-icon">
 									<span style="font-size:30px;color:white;">★</span>
-									<h3>Software Project Management</h3>
+									<h3>UX Design</h3>
+								</section>
+								<section class="row-icon">
+									<span style="font-size:30px;color:white;">★</span>
+									<h3>Branding</h3>
+								</section>
+								<section class="row-icon">
+									<span style="font-size:30px;color:white;">★</span>
+									<h3>Digital Marketing</h3>
 								</section>
 								<section class="row-icon">
 									<span style="font-size:30px;color:white;">★</span>
 									<h3>Frontend Development</h3>
-								</section>
-								<section class="row-icon">
-									<span style="font-size:30px;color:white;">★</span>
-									<h3>E-Commerce</h3>
-								</section>
-								<section class="row-icon">
-									<span style="font-size:30px;color:white;">★</span>
-									<h3>Figma</h3>
-								</section>
-								<section class="row-icon">
-									<span style="font-size:30px;color:white;">★</span>
-									<h3>Web Design</h3>
 								</section>
 							</div>
 						</div>
