add more images

--- a/graphic-design.html
+++ b/graphic-design.html
@@ -44,7 +44,10 @@
               <img class="art-img" src="./images/art/snake.JPG" alt="">
             </div>
             <div class="pic-wrapper">
-              <img class="art-img" src="./images/art/joshua.JPG" alt="">
+              <img class="art-img" src="./images/art/frog.JPG" alt="">
+            </div>
+            <div class="pic-wrapper">
+              <img class="art-img" src="./images/art/plants.JPG" alt="">
             </div>
             <div class="pic-wrapper">
               <img class="art-img" src="./images/art/bee.JPG" alt="">
@@ -62,25 +65,22 @@
               <img class="art-img" src="./images/art/delicate.JPG" alt="">
             </div>
             <div class="pic-wrapper">
-              <img class="art-img" src="./images/art/rainbow.JPG" alt="">
+              <img class="art-img" src="./images/art/fall.JPG" alt="">
             </div>
             <div class="pic-wrapper">
               <img class="art-img" src="./images/logos/bike.png" alt="">
             </div>
             <div class="pic-wrapper">
-              <img class="art-img" src="./images/art/frog.JPG" alt="">
+              <img class="art-img" src="./images/art/cacti.JPG" alt="">
             </div>
             <div class="pic-wrapper">
-              <img class="art-img" src="./images/art/mermaid.JPG" alt="">
-            </div>
-            <div class="pic-wrapper">
-              <img class="art-img" src="./images/art/mushroom.JPG" alt="">
+              <img class="art-img" src="./images/art/planet.JPG" alt="">
             </div>
             <div class="pic-wrapper">
               <img class="art-img" src="./images/art/tiger.JPG" alt="">
             </div>
             <div class="pic-wrapper">
-              <img class="art-img" src="./images/art/plants.JPG" alt="">
+              <img class="art-img" src="./images/art/joshua.JPG" alt="">
             </div>
             <div class="pic-wrapper">
               <img class="art-img" src="./images/art/shark.JPG" alt="">
@@ -110,16 +110,16 @@
               <img class="art-img" src="./images/art/radio.PNG" alt="">
             </div>
             <div class="pic-wrapper">
-              <img class="art-img" src="./images/art/buck.JPG" alt="">
+              <img class="art-img" src="./images/art/mushroom.JPG" alt="">
             </div>
             <div class="pic-wrapper">
-              <img class="art-img" src="./images/art/cacti.JPG" alt="">
+              <img class="art-img" src="./images/art/mermaid.JPG" alt="">
             </div>
             <div class="pic-wrapper">
               <img class="art-img" src="./images/art/eye.JPG" alt="">
             </div>
             <div class="pic-wrapper">
-              <img class="art-img" src="./images/art/fall.JPG" alt="">
+              <img class="art-img" src="./images/art/rainbow.JPG" alt="">
             </div>
             <div class="pic-wrapper">
               <img class="art-img" src="./images/art/grafiti.JPG" alt="">
@@ -137,7 +137,13 @@
               <img class="art-img" src="./images/art/meeseeks.JPG" alt="">
             </div>
             <div class="pic-wrapper">
+              <img class="art-img" src="./images/art/buck.JPG" alt="">
+            </div>
+            <div class="pic-wrapper">
               <img class="art-img" src="./images/art/spider.PNG" alt="">
+            </div>
+            <div class="pic-wrapper">
+              <img class="art-img" src="./images/art/rick-brenda.JPG" alt="">
             </div>
           </ul>
 
@@ -225,6 +231,9 @@
         </div>
         <div class="pic-wrapper">
           <img class="art-img" src="./images/photography/delicate.JPG" alt="">
+        </div>
+        <div class="pic-wrapper">
+          <img class="art-img" src="./images/photography/lela.JPG" alt="">
         </div>
         <div class="pic-wrapper">
           <img class="art-img" src="./images/photography/falls.JPG" alt="">
