--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							<h1>Maggie McDonald</h1>
 							<p>Creative Leader | Outdoor Enthusiast</p>
 							<p><b>My portfolio is currently undergoing a refresh to better reflect my recent work and leadership experience. I’d be happy
-							to share specific examples or walk through recent projects upon request. Thank you for your understanding!</b></p>
+							to share specific examples or walk through recent projects upon request. </br>Thank you for your understanding!</b></p>
 							<ul class="actions">
 								<li><a class="button fit scrolly" href="#about">About Me</a></li>
 								<!-- <li><a href="#dev23" class="button scrolly">Portfolio Projects</a></li> -->
